--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -51,7 +51,7 @@
         var rudderAnalyticsScript = document.createElement('script');
         rudderAnalyticsScript.src = rudderAnalyticsBaseUrl + '/rudder-analytics.min.js';
         rudderAnalyticsScript.async = true;
-        rudderAnalyticsScript.defer = true;
+        // Commented out as the local build file is auto-injected by rollup
         // document.head.appendChild(rudderAnalyticsScript);
       };
 
@@ -60,7 +60,6 @@
         var rudderAnalyticsPromisesScript = document.createElement('script');
         rudderAnalyticsPromisesScript.src = 'https://polyfill.io/v3/polyfill.min.js?features=globalThis%2CPromise&callback=rudderAnalyticsMount';
         rudderAnalyticsPromisesScript.async = true;
-        rudderAnalyticsPromisesScript.defer = true;
         document.head.appendChild(rudderAnalyticsPromisesScript);
       } else {
         rudderAnalyticsMount();
