--- a/packages/loading-scripts/public/index.html
+++ b/packages/loading-scripts/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./loading-script.js">
+    <script>
       rudderanalytics.identify(
         'customUserID',
         {
