--- a/packages/loading-scripts/public/index.html
+++ b/packages/loading-scripts/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="loading-script.js"></script>
     <script>
       rudderanalytics.identify(
         'customUserID',
