--- a/examples/v3-legacy-minimum-plugins/index.html
+++ b/examples/v3-legacy-minimum-plugins/index.html
@@ -35,10 +35,10 @@
           };
         })(method);
       }
-      try {
-        new Function('return import("")');
-        window.rudderAnalyticsBuildType = 'modern';
-      } catch (e) {}
+      // try {
+      //   new Function('return import("")');
+      //   window.rudderAnalyticsBuildType = "modern";
+      // } catch (e) {}
       window.rudderAnalyticsMount = function () {
         var rudderAnalyticsScript = document.createElement('script');
         rudderAnalyticsScript.src = ''
@@ -71,7 +71,11 @@
         logLevel: 'DEBUG',
         configUrl: 'https://api.rudderlabs.com',
         destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
-        pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins'
+        pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
+        plugins: [
+          'StorageEncryption',
+          'XhrQueue'
+        ]
       };
 
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
