--- a/examples/v3-legacy/index.html
+++ b/examples/v3-legacy/index.html
@@ -71,11 +71,7 @@
         logLevel: 'DEBUG',
         configUrl: 'https://api.rudderlabs.com',
         destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
-        pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
-        // plugins: [
-        //   'StorageEncryption',
-        //   'XhrQueue'
-        // ]
+        pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins'
       };
 
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
