--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -68,6 +68,11 @@
         destSDKBaseURL:
           '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
         pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
+        // queueOptions: {
+        //   batch: {
+        //     maxSize: 5 * 1024, // 5KB
+        //   },
+        // },
         // cookieConsentManager: {
         //   // oneTrust: {
         //   //   enabled: true,
@@ -78,9 +83,10 @@
         // }
         // useBeacon: true,
         // beaconQueueOptions: {
-        //   flushQueueInterval: 60 * 1000,
-        // }
-        storage: {
+        //   flushQueueInterval: 10 * 1000,
+        //   maxItems: 5,
+        // },
+        // storage: {
           // encryption: {
           //   version: 'v3'
           // },
@@ -106,7 +112,11 @@
           //     type: 'cookieStorage',
           //   },
           // },
-        },
+        // },
+        // plugins: [
+        //   'StorageEncryption',
+        //   'XhrQueue'
+        // ]
       };
 
       rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
