--- a/examples/v3/index.html
+++ b/examples/v3/index.html
@@ -40,6 +40,16 @@
         window.rudderAnalyticsBuildType = 'modern';
       } catch (e) {}
       window.rudderAnalyticsMount = function () {
+        if (typeof globalThis !== 'object') {
+          Object.defineProperty(Object.prototype, '__globalThis_magic__', {
+            get: function get() {
+              return this;
+            },
+            configurable: true
+          });
+          __globalThis_magic__.globalThis = __globalThis_magic__;
+          delete Object.prototype.__globalThis_magic__;
+        }
         var rudderAnalyticsScript = document.createElement('script');
         rudderAnalyticsScript.src = ''
           .concat(sdkBaseUrl, '/')
@@ -52,10 +62,10 @@
           document.body.appendChild(rudderAnalyticsScript);
         }
       };
-      if (typeof Promise === 'undefined') {
+      if (typeof Promise === 'undefined' || typeof globalThis === 'undefined') {
         var rudderAnalyticsPromisesScript = document.createElement('script');
         rudderAnalyticsPromisesScript.src =
-          'https://polyfill.io/v3/polyfill.min.js?features=globalThis%2CPromise&callback=rudderAnalyticsMount';
+          'https://polyfill.io/v3/polyfill.min.js?features=Symbol%2CPromise&callback=rudderAnalyticsMount';
         rudderAnalyticsPromisesScript.async = asyncScript;
         if (document.head) {
           document.head.appendChild(rudderAnalyticsPromisesScript);
