--- a/packages/sanity-suite/public/v3/eventFiltering/index-npm.html
+++ b/packages/sanity-suite/public/v3/eventFiltering/index-npm.html
@@ -57,7 +57,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://polyfill.io/v3/polyfill.min.js?features=globalThis%2CMutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"
+      src="https://polyfill.io/v3/polyfill.min.js?features=Symbol%2CglobalThis%2CMutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
     <style>
