--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -74,20 +74,6 @@
       }
       // New addition to load script ends
 
-      // Sets the user ID/anonymous ID
-      // Sending these Identify and Track event to test the preload buffer
-      rudderanalytics.setAnonymousId("automationqa_123");
-
-      // Identify call
-      rudderanalytics.identify("12345", {
-        name: "Automation QA"
-      });
-
-      // Track call
-      rudderanalytics.track("test event", {
-        testProp: "automationQA_prop1"
-      });
-
       var loadOptions={
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
@@ -101,7 +87,12 @@
         },
         storage: {
           migrate: true
-        }
+        },
+        anonymousIdOptions: {
+        autoCapture: {
+          enabled: true,
+          source: "segment"
+        }}
       };
 
       rudderanalytics.load(
