--- a/packages/sanity-suite/public/v3/manualLoadCall/index-npm.html
+++ b/packages/sanity-suite/public/v3/manualLoadCall/index-npm.html
@@ -54,7 +54,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://polyfill.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CglobalThis%2CMutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"
+      src="https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CglobalThis%2CMutationObserver%2CArray.from%2CArray.prototype.find%2CArray.prototype.includes%2CPromise%2CString.prototype.endsWith%2CString.prototype.includes%2CString.prototype.startsWith%2CObject.entries%2CObject.values%2CElement.prototype.dataset%2CString.prototype.replaceAll"
     ></script>
     <script>
       if (typeof globalThis === 'undefined') {
