chore: update all the sample applications to latest

--- a/examples/chrome-extension/background-script-websockets/settings/settings.html
+++ b/examples/chrome-extension/background-script-websockets/settings/settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="settings.css">
-    <title>Rudderstack SDK: Chrome Extension Background Script Sample: Settings</title>
+    <title>RudderStack SDK: Chrome Extension Background Script Sample: Settings</title>
 </head>
 <body>
     This is the <span class="special-text">settings</span> page for the addon.
