--- a/examples/chrome-extension/content-script-v3/popup/popup.html
+++ b/examples/chrome-extension/content-script-v3/popup/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="popup.css" />
-    <title>Rudderstack SDK: Chrome Extension Content Script Sample</title>
+    <title>RudderStack SDK: Chrome Extension Content Script Sample</title>
   </head>
   <body>
     This is the <span class="special-text">HTML</span> body of the addon.
