chore: fix status class
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/packages/sanity-suite/public/all/index.html
+++ b/packages/sanity-suite/public/all/index.html
@@ -653,8 +653,8 @@
                     if (status === 'failed') hasFailures = true;
                 } else {
                     // Mark incomplete as timeout
-                    suiteResults[i].status = 'cors-blocked';
-                    updateIndividualResult(i, 'cors-blocked', '⏰ Timeout');
+                    suiteResults[i].status = 'timeout';
+                    updateIndividualResult(i, 'timeout', '⏰ Timeout');
                 }
             }
             
