chore: address ai bot review comments

--- a/packages/sanity-suite/public/all/index.html
+++ b/packages/sanity-suite/public/all/index.html
@@ -616,6 +616,7 @@
             classList.remove('success');
             classList.remove('failed');
             classList.remove('cors-blocked');
+            classList.remove('timeout');
             
             // Add new status class
             classList.add(status);
